tests/NormalTests/paczka1/fuzzy1/84673552.err
Error in line 5: DlpPljHt S923 78,71
Error in line 4: DlpPljHt A104 42,4
Error in line 14: A104 S923 77,4
Error in line 18: A104 A474 14,7
Error in line 22: uvmZw A474 -5,7
Error in line 19: A104 S596 98,3
Error in line 21: uvmZw A474 86,1
Error in line 10: DlpPljHt S923 328,0
